--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div class="row">
                 <div class="col-sm">
-                    <button></button>
+                    <button>␡</button>
                 </div>
                 <div class="col-sm">
                     <button>(</button>
