--- a/index.html
+++ b/index.html
@@ -24,14 +24,42 @@
                     <button>mod</button>
                 </div>
                 <div class="col-sm">
-                    <button></button>
+                    <button>π</button>
                 </div>
             </div>
             <div class="row">
-                <input type="text">
+                <div class="col-sm">
+                    <button>7</button>
+                </div>
+                <div class="col-sm">
+                    <button>8</button>
+                </div>
+                <div class="col-sm">
+                    <button>9</button>
+                </div>
+                <div class="col-sm">
+                    <button>÷</button>
+                </div>
+                <div class="col-sm">
+                    <button>√</button>
+                </div>
             </div>
             <div class="row">
-                <input type="text">
+                <div class="col-sm">
+                    <button>4</button>
+                </div>
+                <div class="col-sm">
+                    <button>5</button>
+                </div>
+                <div class="col-sm">
+                    <button>6</button>
+                </div>
+                <div class="col-sm">
+                    <button>×</button>
+                </div>
+                <div class="col-sm">
+                    <button>x<sup>2</sup></button>
+                </div>
             </div>
         </div>
     </body>
