--- a/index.html
+++ b/index.html
@@ -17,53 +17,53 @@
         </div>
         <div class="row">
             <div class="col-sm">
-                <button>␡</button>
+                <button type="button" class="btn btn-primary">␡</button>
             </div>
             <div class="col-sm">
-                <button>(</button>
+                <button type="button" class="btn btn-primary">(</button>
             </div>
             <div class="col-sm">
-                <button>)</button>
+                <button type="button" class="btn btn-primary">)</button>
             </div>
             <div class="col-sm">
-                <button>mod</button>
+                <button type="button" class="btn btn-primary">mod</button>
             </div>
             <div class="col-sm">
-                <button>π</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
-                <button>7</button>
-            </div>
-            <div class="col-sm">
-                <button>8</button>
-            </div>
-            <div class="col-sm">
-                <button>9</button>
-            </div>
-            <div class="col-sm">
-                <button>÷</button>
-            </div>
-            <div class="col-sm">
-                <button>√</button>
+                <button type="button" class="btn btn-primary">π</button>
             </div>
         </div>
         <div class="row">
             <div class="col-sm">
-                <button>4</button>
+                <button type="button" class="btn btn-primary">7</button>
             </div>
             <div class="col-sm">
-                <button>5</button>
+                <button type="button" class="btn btn-primary">8</button>
             </div>
             <div class="col-sm">
-                <button>6</button>
+                <button type="button" class="btn btn-primary">9</button>
             </div>
             <div class="col-sm">
-                <button>×</button>
+                <button type="button" class="btn btn-primary">÷</button>
             </div>
             <div class="col-sm">
-                <button>x<sup>2</sup></button>
+                <button type="button" class="btn btn-primary">√</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary">4</button>
+            </div>
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary">5</button>
+            </div>
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary">6</button>
+            </div>
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary">×</button>
+            </div>
+            <div class="col-sm">
+                <button type="button" class="btn btn-primary">x<sup>2</sup></button>
             </div>
         </div>
     </div>
