--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <input type="text">
         </div>
-        <div class="row">
+        <div class="button-group">
             
               <button type="button" class="btn btn-primary">␡</button>
 
