--- a/index.html
+++ b/index.html
@@ -16,54 +16,40 @@
             <input type="text">
         </div>
         <div class="button-group">
-            
-              <button type="button" class="btn btn-primary">␡</button>
-
-
-              <button type="button" class="btn btn-primary">(</button>
-
-
-              <button type="button" class="btn btn-primary">)</button>
-
-              <button type="button" class="btn btn-primary">mod</button>
-
-
-              <button type="button" class="btn btn-primary">π</button>
+            <button type="button" class="btn btn-primary">␡</button>
+            <button type="button" class="btn btn-primary">(</button>
+            <button type="button" class="btn btn-primary">)</button>
+            <button type="button" class="btn btn-primary">mod</button>
+            <button type="button" class="btn btn-primary">π</button>
 
         </div>
-        <div class="row">
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">7</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">8</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">9</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">÷</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">√</button>
-            </div>
+        <div class="button-group">
+            <button type="button" class="btn btn-primary">7</button>
+            <button type="button" class="btn btn-primary">8</button>
+            <button type="button" class="btn btn-primary">9</button>
+            <button type="button" class="btn btn-primary">÷</button>
+            <button type="button" class="btn btn-primary">√</button>
         </div>
         <div class="row">
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">4</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">5</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">6</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">×</button>
-            </div>
-            <div class="col-sm">
-                <button type="button" class="btn btn-primary">x<sup>2</sup></button>
-            </div>
+            <button type="button" class="btn btn-primary">4</button>
+            <button type="button" class="btn btn-primary">5</button>
+            <button type="button" class="btn btn-primary">6</button>
+            <button type="button" class="btn btn-primary">×</button>
+            <button type="button" class="btn btn-primary">x<sup>2</sup></button>
+        </div>
+        <div class="button-group">
+            <button type="button" class="btn btn-primary">1</button>
+            <button type="button" class="btn btn-primary">2</button>
+            <button type="button" class="btn btn-primary">3</button>
+            <button type="button" class="btn btn-primary">-</button>
+            <button type="button" class="btn btn-primary">+/-</button>
+        </div>
+        <div class="button-group">
+            <button type="button" class="btn btn-primary">0</button>
+            <button type="button" class="btn btn-primary">,</button>
+            <button type="button" class="btn btn-primary">%</button>
+            <button type="button" class="btn btn-primary">+</button>
+            <button type="button" class="btn btn-primary">=</button>
         </div>
     </div>
     <!-- Optional JavaScript -->
