--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
             <input type="text">
         </div>
         <div class="button-group">
-            <button type="button" class="btn btn-primary">␡</button>
-            <button type="button" class="btn btn-primary">(</button>
-            <button type="button" class="btn btn-primary">)</button>
-            <button type="button" class="btn btn-primary">mod</button>
-            <button type="button" class="btn btn-primary">π</button>
+            <button type="button" class="btn btn-outline-primary">␡</button>
+            <button type="button" class="btn btn-outline-primary">(</button>
+            <button type="button" class="btn btn-outline-primary">)</button>
+            <button type="button" class="btn btn-outline-primary">mod</button>
+            <button type="button" class="btn btn-outline-primary">π</button>
 
         </div>
         <div class="button-group">
-            <button type="button" class="btn btn-primary">7</button>
-            <button type="button" class="btn btn-primary">8</button>
-            <button type="button" class="btn btn-primary">9</button>
-            <button type="button" class="btn btn-primary">÷</button>
-            <button type="button" class="btn btn-primary">√</button>
+            <button type="button" class="btn btn-outline-primary">7</button>
+            <button type="button" class="btn btn-outline-primary">8</button>
+            <button type="button" class="btn btn-outline-primary">9</button>
+            <button type="button" class="btn btn-outline-primary">÷</button>
+            <button type="button" class="btn btn-outline-primary">√</button>
         </div>
         <div class="row">
-            <button type="button" class="btn btn-primary">4</button>
-            <button type="button" class="btn btn-primary">5</button>
-            <button type="button" class="btn btn-primary">6</button>
-            <button type="button" class="btn btn-primary">×</button>
-            <button type="button" class="btn btn-primary">x<sup>2</sup></button>
+            <button type="button" class="btn btn-outline-primary">4</button>
+            <button type="button" class="btn btn-outline-primary">5</button>
+            <button type="button" class="btn btn-outline-primary">6</button>
+            <button type="button" class="btn btn-outline-primary">×</button>
+            <button type="button" class="btn btn-outline-primary">x<sup>2</sup></button>
         </div>
         <div class="button-group">
-            <button type="button" class="btn btn-primary">1</button>
-            <button type="button" class="btn btn-primary">2</button>
-            <button type="button" class="btn btn-primary">3</button>
-            <button type="button" class="btn btn-primary">-</button>
-            <button type="button" class="btn btn-primary">+/-</button>
+            <button type="button" class="btn btn-outline-primary">1</button>
+            <button type="button" class="btn btn-outline-primary">2</button>
+            <button type="button" class="btn btn-outline-primary">3</button>
+            <button type="button" class="btn btn-outline-primary">-</button>
+            <button type="button" class="btn btn-outline-primary">+/-</button>
         </div>
         <div class="button-group">
-            <button type="button" class="btn btn-primary">0</button>
-            <button type="button" class="btn btn-primary">,</button>
-            <button type="button" class="btn btn-primary">%</button>
-            <button type="button" class="btn btn-primary">+</button>
-            <button type="button" class="btn btn-primary">=</button>
+            <button type="button" class="btn btn-outline-primary">0</button>
+            <button type="button" class="btn btn-outline-primary">,</button>
+            <button type="button" class="btn btn-outline-primary">%</button>
+            <button type="button" class="btn btn-outline-primary">+</button>
+            <button type="button" class="btn btn-outline-primary">=</button>
         </div>
     </div>
     <!-- Optional JavaScript -->
