--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button type="button" class="btn btn-outline-primary">÷</button>
             <button type="button" class="btn btn-outline-primary">√</button>
         </div>
-        <div class="row">
+        <div class="button-group">
             <button type="button" class="btn btn-outline-primary">4</button>
             <button type="button" class="btn btn-outline-primary">5</button>
             <button type="button" class="btn btn-outline-primary">6</button>
